fix: quiz timer on mobile, result modal ui

--- a/src/Components/Cards/CategoryCard/CategoryCard.css
+++ b/src/Components/Cards/CategoryCard/CategoryCard.css
@@ -55,6 +55,15 @@
   }
 }
 
+@media screen and (max-width: 920px) {
+  .card-square,
+  .card-square .category-card-image,
+  .card-small,
+  .card-small .category-card-image {
+    width: 13.2rem;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .category-card {
     margin: 1rem 1rem 1rem 0;
