--- a/src/Components/Cards/QuestionCard/QuestionCard.css
+++ b/src/Components/Cards/QuestionCard/QuestionCard.css
@@ -159,6 +159,19 @@
     font-size: 1.2rem;
   }
 }
+
+@media screen and (max-width: 900px) {
+  .question-img {
+    width: 100%;
+    height: 40vh;
+    margin: 0 0 1.5rem;
+  }
+
+  .question-details {
+    flex-direction: column;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .question-card {
     width: 100%;
@@ -179,6 +192,12 @@
 
   .quiz-detail {
     grid-gap: 10px;
+    position: sticky;
+    top: 0rem;
+    background-color: var(--background-color);
+    width: 100vw;
+    margin: -1.7rem;
+    padding: 0 1.8rem;
   }
 
   .quiz-total-time img,
@@ -207,7 +226,6 @@
     width: 10rem;
     padding: 10px 0 10px 2.5rem;
     border-radius: 0 10px 0 0;
-    background-color: var(--background-color);
   }
 
   .answer-options {
