--- a/src/Components/UI/Modal/QuizEndModal.css
+++ b/src/Components/UI/Modal/QuizEndModal.css
@@ -16,7 +16,7 @@
 
 .quiz-end-modal .close-btn {
   position: absolute;
-  top: 1rem;
+  top: 0.8rem;
   right: 1rem;
   padding: 8px 10px;
   border-radius: 50%;
@@ -33,7 +33,7 @@
 
 .quiz-end-modal > div {
   width: 35rem;
-  padding: 2.5rem 1.8rem;
+  padding: 1.8rem 1.5rem;
   border-radius: 10px;
   position: relative;
 }
@@ -56,7 +56,7 @@
 
 .quiz-end-modal h1 {
   margin: 1rem 5px 1.5rem;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 400;
 }
 
@@ -66,8 +66,8 @@
 
 .all-questions-container {
   overflow-y: scroll;
-  height: 15rem;
-  margin: 1.5rem 0 2rem;
+  height: 60vh;
+  margin: 1rem 0 1rem;
   border-radius: 4px;
   border: 1px solid var(--sub-title-color);
 }
@@ -105,8 +105,13 @@
 
 @media screen and (max-width: 560px) {
   .quiz-end-modal > div {
-    width: 23.8rem;
-    padding: 2.5rem 10px 1.5rem;
+    width: 100vw;
+    height: 100vh;
+    padding: 2rem 10px 1rem;
+  }
+
+  .all-questions-container {
+    height: 60vh;
   }
 
   .quiz-end-modal h1 {
